--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,12 @@
 runtime: custom
 env: flex
-entrypoint: gunicorn --bind 0.0.0.0:8080 app:app  # Change if your entry point is different
+
+entrypoint: gunicorn -b :$PORT app:app
 
 manual_scaling:
   instances: 1
 
 resources:
-  cpu: 4
-  memory_gb: 8
-  disk_size_gb: 20
-
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
